Falta bastante, actualizar con las notas de clase

--- a/proyectoUTM/Cliente/angular.json
+++ b/proyectoUTM/Cliente/angular.json
@@ -27,7 +27,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/materialize/js/materialize.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/jquery/dist/jquery.js"
+            ]
           },
           "configurations": {
             "production": {
