--- a/proyectoUTM/Cliente/package.json
+++ b/proyectoUTM/Cliente/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "jquery": "^3.6.3",
+    "materialize": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.6.16",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -28,6 +31,8 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
+    "@types/jquery-mask-plugin": "^1.14.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
