--- a/donacion/cliente/package.json
+++ b/donacion/cliente/package.json
@@ -18,11 +18,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.3",
     "materialize": "^1.0.0",
-    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
@@ -32,13 +30,19 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
+    "bootstrap": "^5.3.0-alpha1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "typescript": "~4.8.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
